Add Starter, Producer Example, Consumer Example, README.MD