@@ -1,5 +1,6 @@
 package practicum.example;
 
+import java.util.List;
 import java.util.Properties;
 
 import org.apache.kafka.clients.consumer.ConsumerConfig;
@@ -8,36 +9,35 @@ import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.apache.kafka.common.serialization.StringSerializer;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 @Configuration
+@EnableConfigurationProperties({ConsumerProperties.class, ProducerProperties.class})
 public class KafkaConfig {
-    private static final String GROUP_ID = "group-id";
-    private static final String BOOTSTRAP_SERVERS = "localhost:9092";
-
     @Bean
-    public KafkaConsumer<String, String> kafkaConsumer() {
+    @ConditionalOnProperty(prefix = "practicum.kafka.consumer", name = "enabled", havingValue = "true")
+    public KafkaConsumer<String, String> kafkaConsumer(ConsumerProperties consumerProperties) {
         Properties props = new Properties();
-        props.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, BOOTSTRAP_SERVERS);
-        props.put(ConsumerConfig.GROUP_ID_CONFIG, GROUP_ID);
+        props.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, consumerProperties.bootstrapServers());
+        props.put(ConsumerConfig.GROUP_ID_CONFIG, consumerProperties.groupId());
         props.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
         props.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
-        props.put(ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "earliest");
-
+        props.put(ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, consumerProperties.offsetReset());
         KafkaConsumer<String, String> consumer = new KafkaConsumer<>(props);
-        consumer.subscribe(java.util.Collections.singletonList("my-topic"));
-
+        consumer.subscribe(List.of(consumerProperties.topic()));
         return consumer;
     }
 
     @Bean
-    public KafkaProducer<String, String> kafkaProducer() {
+    @ConditionalOnProperty(prefix = "practicum.kafka.producer", name = "enabled", havingValue = "true")
+    public KafkaProducer<String, String> kafkaProducer(ProducerProperties producerProperties) {
         Properties props = new Properties();
-        props.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, BOOTSTRAP_SERVERS);
+        props.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, producerProperties.bootstrapServers());
         props.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName());
         props.put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName());
-
         return new KafkaProducer<>(props);
     }
 
